--- a/frontend/src/app/containers/home/home.component.html
+++ b/frontend/src/app/containers/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="products">
+    <select name="currency" [(ngModel)]="currency">
+        <option value="EUR">Euros €</option>
+        <option value="GBP">GB Pound £</option>
+        <option value="USD">US Dollar $</option>
+        <option value="CAD">CA Dollar $</option>
+        <option value="JPY">JP Yen ¥</option>
+        <option value="RUB">Rubblo Ruso Br</option>
+    </select>
+    <div class="product" *ngFor="let product of (products$ | async)">
+        <h3>{{product.name }}</h3>
+        <img src="{{product.image_path}}" alt="imagen">
+        <h5>Price: {{product.price * ((exchangeRates$ |async)['rates'][currency] || 1) | currency:currency}}</h5>
+        {{product.createdAt | date:'dd/MM/yyyy'}}
+    </div>
+</div>
