search by route

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -17,5 +17,9 @@
     <li nz-menu-item routerLink="register" *ngIf="!user['id']">
       Register
     </li>
+    <form (submit)="searchProducts($event)">
+      <input type="search" name="search" id="">
+      <button type="submit">Buscar</button>
+    </form>
   </ul>
 </header>
