--- a/frontend/src/app/components/product/product.component.html
+++ b/frontend/src/app/components/product/product.component.html
@@ -1,4 +1,6 @@
-<div class="product" *ngIf="product">
+<div class="product" *ngIf="product" 
+routerLink="product/{{product.id}}"
+>
     <h3>{{product.name }}</h3>
     <img src="{{product.image_path}}" alt="imagen">
     <h5>Price: {{product.price * rate | currency:currency}}</h5>
