--- a/frontend/src/app/containers/home/home.component.html
+++ b/frontend/src/app/containers/home/home.component.html
@@ -1,16 +1,29 @@
-<div class="products">
-    <select name="currency" [(ngModel)]="currency">
-        <option value="EUR">Euros €</option>
-        <option value="GBP">GB Pound £</option>
-        <option value="USD">US Dollar $</option>
-        <option value="CAD">CA Dollar $</option>
-        <option value="JPY">JP Yen ¥</option>
-        <option value="RUB">Rubblo Ruso Br</option>
-    </select>
-    <app-product 
-    [product]="product" 
-    rate="{{(exchangeRates$ |async)?.rates[currency] || 1}}"
-    [currency]="currency"
-     *ngFor="let product of (products$ | async)"></app-product>
-    
+<div class="products" *ngIf="((exchangeRates$ |async)?.rates[currency] || 1) as rate">
+  <select name="currency" [(ngModel)]="currency">
+    <option value="EUR">Euros €</option>
+    <option value="GBP">GB Pound £</option>
+    <option value="USD">US Dollar $</option>
+    <option value="CAD">CA Dollar $</option>
+    <option value="JPY">JP Yen ¥</option>
+    <option value="RUB">Rubblo Ruso Br</option>
+  </select>
+
+  <select name="currency" (change)="order($event.target.value)">
+    <option value="name,asc">Por nombre</option>
+    <option value="price,asc">Por Precio</option>
+    <option value="amount,asc">Por cantidad</option>
+    <option value="name,desc">Por nombre (Descendiente)</option>
+    <option value="price,desc">Por Precio (Descendiente)</option>
+    <option value="amount,desc">Por cantidad (Descendiente)</option>
+  </select>
+  <select (change)=filterByCategory($event.target.value)>
+      <option value="0">Mostrar Todos</option>
+      <option [value]="category.id" *ngFor="let category of (categories$ | async)" >
+          {{category.name}}
+      </option>
+  </select>
+  <app-product [product]="product" [rate]="rate" [currency]="currency"
+   *ngFor="let product of productsFiltered">
+  </app-product>
+
 </div>
