--- a/frontend/src/app/containers/user/login/login.component.html
+++ b/frontend/src/app/containers/user/login/login.component.html
@@ -4,7 +4,9 @@
     <nz-form-item>
       <nz-form-control nzErrorTip="Please input your username!">
         <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="username" placeholder="username" />
+          <input type="text" #usernameInput
+          nz-input formControlName="username" 
+          placeholder="username" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
